sandbox/output
FizzBuzz.java:6: error: cannot find symbol
        Handler normalNumberHandler = new NormalNumberHandler(null);
                                          ^
  symbol:   class NormalNumberHandler
  location: class FizzBuzz
FizzBuzz.java:7: error: constructor BuzzHandler in class BuzzHandler cannot be applied to given types;
        Handler buzzHandler = new BuzzHandler(normalNumberHandler);
                              ^
  required: no arguments
  found: Handler
  reason: actual and formal argument lists differ in length
FizzBuzz.java:8: error: constructor FizzHandler in class FizzHandler cannot be applied to given types;
        Handler fizzHandler = new FizzHandler(buzzHandler);
                              ^
  required: no arguments
  found: Handler
  reason: actual and formal argument lists differ in length
FizzBuzz.java:9: error: constructor FizzBuzzHandler in class FizzBuzzHandler cannot be applied to given types;
        this.fizzBuzzHandler = new FizzBuzzHandler(fizzHandler);
                               ^
  required: no arguments
  found: Handler
  reason: actual and formal argument lists differ in length
FizzBuzz.java:15: error: cannot find symbol
        result = this.fizzBuzzHandler.handle(number);
                                     ^
  symbol:   method handle(int)
  location: variable fizzBuzzHandler of type Handler
5 errors
